# gestion-academica-rust

./: Cargo.toml  README.md  script.sql
src/: main.rs
src/adapters/http/: mod.rs
src/adapters/http/dto/: career_dto.rs  course_dto.rs  enrollment_dto.rs  mod.rs  user_dto.rs
src/adapters/http/handlers/: auth_handler.rs  career_handler.rs  course_handler.rs  enrollment_handler.rs  mod.rs  user_handler.rs
src/adapters/http/middleware/: auth_middleware.rs
src/adapters/http/responses/: api_response.rs
src/adapters/http/routes/: auth_route.rs  career_route.rs  course_route.rs  enrollment_route.rs  mod.rs  user_route.rs
src/auth/: claims.rs  jwt.rs  password.rs
src/domain/models/: career.rs  course.rs  enrollment.rs  mod.rs  user.rs
src/errors/: app_error.rs  mod.rs
src/infrastructure/: config.rs  database.rs
