[package]
name = "gestion-academica-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "json"] }
anyhow = "1"
thiserror = "2.0"
dotenvy = "0.15"
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"
rand_core = "0.10.0"
